<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SysAdmin Reminder</string>
    <string name="tasks_name">Tasks</string>
    <string name="new_task_name">New task</string>
    <string name="edit_task_name">Edit task</string>
    <string name="tasks_history_name">History</string>
    <string name="tasks_code">tasks</string>
    <string name="new_task_code">new_task</string>
    <string name="tasks_history_code">tasks_history</string>
    <string name="priority_little">Little</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="priority_critical">Critical</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="task_hint">Print a task</string>
    <string name="proceed_at_hint">Proceed at</string>
    <string name="select_date_hint">Select date</string>
    <string name="select_time_hint">Select time</string>
    <string name="priority_hint">Priority</string>
    <string name="priority_title">Select a priority</string>
    <string name="add_new_task">Add</string>
    <string name="edit_task">Edit</string>
    <string name="cancel_new_task">Cancel</string>
    <string name="invalid_data">Invalid data</string>
    <string name="edit_task_menu">Edit</string>
    <string name="delete_task_menu">Delete</string>
</resources>