<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_outer_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_new_task_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cl_inner_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_new_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="4dp"
                android:text="@string/new_task_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_new_task_desc"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:background="@drawable/background"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/task_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/proceed_at_hint"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_new_task_exec_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/background"
                    android:ems="10"
                    android:hint="@string/select_date_hint"
                    android:inputType="date"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_new_task_exec_time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/background"
                    android:ems="10"
                    android:hint="@string/select_time_hint"
                    android:inputType="time"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_new_task_prior_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/priority_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/s_new_task_prior"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_background"
                    android:gravity="center|end"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_new_task_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/background"
                    android:text="@android:string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/b_new_task_add"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/background"
                    android:text="@string/add_new_task"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_inner_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bnv_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bnv_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/dark_grey"
            app:itemIconTint="@drawable/bnv_selector"
            app:itemTextColor="@drawable/bnv_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>